--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -1236,9 +1236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Quiz \n",
-    "\n",
-    "Construye una clase en Python que *modele* el comportamiento de las sucursales de un banco. Esta clase deberá tener un atributo de clase que permita almacenar mediante un diccionario los números de cuenta y nombres de los usuarios, así tambie debe contar con métodos de instancia que permitan crear una nueva cuenta, eliminar una cuenta y mostrar cuentas de la sucursal.   operaciones aritméticas y otras funcionalidades útiles para trabajar con fracciones. La clase debe cumplir con las siguientes caracteristicas:"
+    "## Quiz "
    ]
   },
   {
@@ -1246,6 +1244,8 @@
    "metadata": {},
    "source": [
     "### Crea una clase `Banco` con las siguientes características:\n",
+    "\n",
+    "Construye una clase en Python que *modele* el comportamiento de las sucursales de un banco. Esta clase deberá tener un atributo de clase que permita almacenar mediante un diccionario los números de cuenta y nombres de los usuarios, así tambie debe contar con métodos de instancia que permitan crear una nueva cuenta, eliminar una cuenta y mostrar cuentas de la sucursal.   operaciones aritméticas y otras funcionalidades útiles para trabajar con fracciones. En general, la clase debe cumplir con las siguientes caracteristicas:\n",
     "\n",
     "#### Atributos de clase e instancia\n",
     "- Un atributo de clase llamado `cuentas` que permita registrar números de cuenta en un diccionario cuya clave sea el número de cuenta y el valor correspondiente sea el nombre completo del titular.\n",
