--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -1265,17 +1265,457 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Módulo `Sympy`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`sympy` es una biblioteca para **cálculo simbólico** que permite manipular expresiones matemáticas de manera algebraica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definir una expresión algebraica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x**2 + 2*x*y + y**2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y, z = sp.symbols('x y z')\n",
+    "\n",
+    "expresion = x**2 + 2*x*y + y**2\n",
+    "print(expresion)  \n",
+    "#expresion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Manipulación algebraica"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as sp\n",
+    "expresion = (x + y) ** 3\n",
     "\n",
-    "x = sp.Symbol(\"x\")\n",
-    "eqn = x**2\n",
-    "eqn"
+    "expresion1 = sp.expand(expresion)\n",
+    "print(expresion1) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(x + 1)**2\n"
+     ]
+    }
+   ],
+   "source": [
+    "expresion2 = sp.factor(x**2 + 2*x + 1)\n",
+    "print(expresion2)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x + y\n"
+     ]
+    }
+   ],
+   "source": [
+    "expresion = (x**2 - y**2) / (x - y)\n",
+    "expresion3 = sp.simplify(expresion)\n",
+    "print(expresion3) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Derivadas e integrales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3*x**2 + 6*x + 5\n",
+      "6*(x + 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = x**3 + 3*x**2 + 5*x + 7\n",
+    "\n",
+    "\n",
+    "dfdx = sp.diff(f, x)\n",
+    "print(dfdx)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d2fdx2 = sp.diff(f, x, 2)\n",
+    "print(d2fdx2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = x**2 + 2*x + 1\n",
+    "\n",
+    "integral = sp.integrate(g, x)\n",
+    "print(integral)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "integral_def = sp.integrate(g, (x, 0, 2))\n",
+    "print(integral_def)  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solución de ecuaciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "eqn = x**2 - 5*x + 6  # x^2 - 5x + 6 = 0\n",
+    "sol = sp.solve(eqn, x)\n",
+    "print(sol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eqn = sp.sin(x) - x/2\n",
+    "sol = sp.solve(eqn, x)\n",
+    "print(sol) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eq1 = sp.Eq(2*x + y, 1)\n",
+    "eq2 = sp.Eq(x - y, 3)\n",
+    "\n",
+    "sol = sp.solve((eq1, eq2), (x, y))\n",
+    "print(sol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cálculo de límites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "expresion = sp.sin(x) / x\n",
+    "lim = sp.limit(expresion, x, 0)\n",
+    "print(lim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Series de Taylor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x - x**3/6 + x**5/120 + O(x**6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = sp.sin(x)\n",
+    "\n",
+    "taylor_series = sp.series(f, x, 0, 6)\n",
+    "print(taylor_series)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Álgebra lineal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n",
+      "Matrix([[-2, 1], [3/2, -1/2]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}-2 & 1\\\\\\frac{3}{2} & - \\frac{1}{2}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[ -2,    1],\n",
+       "[3/2, -1/2]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = sp.Matrix([[1, 2], [3, 4]])\n",
+    "\n",
+    "detA = A.det()\n",
+    "print(detA) \n",
+    "\n",
+    "\n",
+    "A_inv = A.inv()\n",
+    "print(A_inv)\n",
+    "A_inv\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{5/2 - sqrt(33)/2: 1, 5/2 + sqrt(33)/2: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "eigenvals = A.eigenvals()\n",
+    "eigenvecs = A.eigenvects()\n",
+    "print(eigenvals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluación númerica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1415926535897932384626433832795028841971693993751\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi_val = sp.N(sp.pi, 50)  \n",
+    "print(pi_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sqrt_val = sp.N(sp.sqrt(2), 10) \n",
+    "print(sqrt_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Probabilidad y combinatoria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "binomial(n, k)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle {\\binom{n}{k}}$"
+      ],
+      "text/plain": [
+       "binomial(n, k)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n, k = sp.symbols('n k')\n",
+    "binomial_coeff = sp.binomial(n, k)\n",
+    "print(binomial_coeff)  \n",
+    "binomial_coeff\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sqrt(2)*exp(-(X - mu)**2/(2*sigma**2))/(2*sqrt(pi)*sigma)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{\\sqrt{2} e^{- \\frac{\\left(X - \\mu\\right)^{2}}{2 \\sigma^{2}}}}{2 \\sqrt{\\pi} \\sigma}$"
+      ],
+      "text/plain": [
+       "sqrt(2)*exp(-(X - mu)**2/(2*sigma**2))/(2*sqrt(pi)*sigma)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mu, sigma = sp.symbols('mu sigma')\n",
+    "X = sp.Symbol('X')\n",
+    "pdf = (1 / (sp.sqrt(2 *sp.pi) * sigma)) * sp.exp(-((X - mu)**2) / (2 * sigma**2))\n",
+    "print(pdf)  \n",
+    "pdf\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
