--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -1416,11 +1416,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Métodos de clase (`@classmethod`) \n",
     "\n",
@@ -1515,7 +1510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cadena = \"Lluvia, Ramírez, Torres, A99999, Huatulco, Administración Turística\""
+    "datos = \"Lluvia, Ramírez, Torres, A99999, Huatulco, Administración Turística\""
    ]
   },
   {
@@ -1524,7 +1519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alumno_nuevo = Alumno.desde_cadena(cadena)"
+    "alumno_nuevo = Alumno.desde_cadena(datos)"
    ]
   },
   {
@@ -1569,7 +1564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(Alumno.es_campus_valido(\"Ciudad de México\")) "
+    "print(Alumno.check_campus(\"Ciudad de México\")) "
    ]
   },
   {
