--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -1580,7 +1580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Alumno_umar_huatulco: \n",
+    "class Umar_huatulco: \n",
     "    carreras_disponibles = [\"Actuaría\", \"Economía\", \"Ciencias de la Comunicación\", \"Administración Turística\", \"Relaciones Internacionales\", \"Ciencias Marítimas\"]\n",
     "\n",
     "    @classmethod\n",
@@ -1594,7 +1594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(Alumno_umar_huatulco.mostrar_carreras_disponibles())"
+    "print(Umar_huatulco.mostrar_carreras_disponibles())"
    ]
   },
   {
