--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -1608,7 +1608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En Python `dir()` es una función incorporada en Python que se usa para inspeccionar los atributos y métodos disponibles de un objeto, una clase o un módulo."
+    "En Python `dir()` es una función incorporada que se usa para inspeccionar los atributos y métodos disponibles de un objeto, una clase o un módulo."
    ]
   },
   {
@@ -1671,14 +1671,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Definir una propiedad"
+    "### `Getter` y `Setter` en Python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para definir una propiedad en Python, se utilizan los ***decoradores*** `@property` y `@<nombre_atributo.setter`. Aquí hay un ejemplo que ilustra cómo se utiliza:"
+    "Son métodos especiales que controlan cómo accedemos y modificamos los atributos de un objeto.\n",
+    "\n",
+    "* Un `getter` nos permite obtener el valor de un atributo de manera controlada.\n",
+    "\n",
+    "* Un `setter` nos permite modificar el valor del atributo con validaciones o lógica extra.\n",
+    "\n",
+    "Se utilizan junto con el decorador `@property` para hacer que los atributos sean accesibles como si fueran públicos, pero en realidad están controlados por métodos.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Aquí hay un ejemplo que ilustra cómo se utilizan:"
    ]
   },
   {
@@ -1688,7 +1702,6 @@
    "outputs": [],
    "source": [
     "class Punto:\n",
-    "    \n",
     "    def __init__(self,x=0,y=0):\n",
     "        self.x = x\n",
     "        self.y = y\n",
@@ -1697,9 +1710,11 @@
     "    def x(self):\n",
     "        return self._x\n",
     "    \n",
-    "    @x.setter\n",
     "    def x(self,nueva_cordenada):\n",
-    "        self._x = nueva_cordenada\n",
+    "        if isinstance(nueva_cordenada,(int,float)):\n",
+    "            self._x = nueva_cordenada\n",
+    "        else:\n",
+    "            raise ValueError('El valor ingresado debe ser un numero')\n",
     "        \n",
     "    @property\n",
     "    def y(self):\n",
@@ -1734,6 +1749,241 @@
    "outputs": [],
    "source": [
     "a = Punto(5,'j')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supongamos que queremos una clase `Cuenta` donde: `saldo` sea un atributo privado, para este tipo de atributos se útiliza la convención: `_saldo`). Podemos ver el saldo con un `getter` y podemos modificar el saldo con un `setter`, pero con validación (no puede ser negativo)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cuenta:\n",
+    "    def __init__(self, saldo_inicial):\n",
+    "        self._saldo = None  \n",
+    "        self.saldo = saldo_inicial  \n",
+    "\n",
+    "    @property\n",
+    "    # Getter\n",
+    "    def saldo(self):  \n",
+    "        return self._saldo # Devuelve el saldo actual.\n",
+    "\n",
+    "    @saldo.setter\n",
+    "    # Setter\n",
+    "    def saldo(self, nuevo_saldo):  \n",
+    "        if isinstance(nuevo_saldo, (int, float)) and nuevo_saldo >= 0: #Asigna un nuevo saldo si es válido (>= 0).\n",
+    "            self._saldo = nuevo_saldo\n",
+    "        else:\n",
+    "            raise ValueError(\"El saldo no puede ser negativo ni un valor inválido\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "cuenta = Cuenta(1000) \n",
+    "print(cuenta.saldo)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500\n"
+     ]
+    }
+   ],
+   "source": [
+    "cuenta.saldo = 500  \n",
+    "print(cuenta.saldo) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "El saldo no puede ser negativo ni un valor inválido",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_48285/387019626.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcuenta\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msaldo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_48285/1481449880.py\u001b[0m in \u001b[0;36msaldo\u001b[0;34m(self, nuevo_saldo)\u001b[0m\n\u001b[1;32m     15\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_saldo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnuevo_saldo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"El saldo no puede ser negativo ni un valor inválido\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: El saldo no puede ser negativo ni un valor inválido"
+     ]
+    }
+   ],
+   "source": [
+    "cuenta.saldo = -100  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Observaciones**\n",
+    "\n",
+    "* **Atributo privado**: Se usa _saldo en lugar de saldo para indicar que no debería modificarse directamente.\n",
+    "  \n",
+    "\n",
+    "* `Getter` (`@property`): Nos permite acceder a `_saldo` como si fuera un atributo normal (`cuenta.saldo` en lugar de `cuenta._saldo`).\n",
+    "  \n",
+    "\n",
+    "* `Setter` (`@saldo.setter`): Controla la asignación de valores a `_saldo`, asegurando que nunca sea negativo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A veces, solo queremos calcular un valor basado en otros atributos, sin permitir que se modifique directamente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imagina que nuestra cuenta bancaria esta en dólares 🤑, pero queremos obtener automáticamente el saldo en pesos mexicanos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cuenta:\n",
+    "    def __init__(self, saldo_usd, tipo_cambio):\n",
+    "        self._saldo_usd = None  \n",
+    "        self.saldo_usd = saldo_usd  \n",
+    "        self.tipo_cambio = tipo_cambio  \n",
+    "    \n",
+    "    @property\n",
+    "    def saldo_usd(self):\n",
+    "        return self._saldo_usd\n",
+    "\n",
+    "    @saldo_usd.setter\n",
+    "    def saldo_usd(self, valor):\n",
+    "        if valor < 0:\n",
+    "            raise ValueError(\"El saldo no puede ser negativo.\")\n",
+    "        self._saldo_usd = valor\n",
+    "\n",
+    "\n",
+    "    @property\n",
+    "    # Utilizamos solo Getter\n",
+    "    def saldo_mxn(self):  \n",
+    "        return self.saldo_usd * self.tipo_cambio\n",
+    "    \n",
+    "    \n",
+    "    @property\n",
+    "    def saldo_mxn(self):\n",
+    "        return self._saldo_usd * self.tipo_cambio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cuenta = Cuenta(100, 17.5) \n",
+    "print(cuenta.saldo_mxn)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Cuenta' object has no attribute 'saldo_mxn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_48285/956617360.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcuenta\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msaldo_usd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcuenta\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msaldo_mxn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Cuenta' object has no attribute 'saldo_mxn'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "cuenta.saldo_usd = 200 \n",
+    "print(cuenta.saldo_mxn)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ejemplo \n",
+    "Se desea tener una clase `Circulo` donde el radio se pueda modificar, pero el `perímetro` se calcule automáticamente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "class Circulo:\n",
+    "    def __init__(self, radio):\n",
+    "        self.radio = radio  \n",
+    "\n",
+    "    @property\n",
+    "    def perimetro(self):  \n",
+    "        return 2 * math.pi * self.radio  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = Circulo(10)\n",
+    "print(c.perimetro)"
    ]
   },
   {
