--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -1654,6 +1654,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "En Python, `property` es una función incorporada que permite definir atributos gestionados (también llamados propiedades) en una clase. Estas propiedades permiten *encapsular* el acceso a los atributos de un objeto, proporcionando es una **forma de controlar el acceso y la manipulación de atributos de una clase**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Los atributos de instancia, definen una serie de características que poseen los objetos. Como hemos visto anteriormente, se declaran haciendo uso de la referencia a la instancia a través de `self`. Sin embargo, Python nos ofrece la posibilidad de utilizar un método alternativo que resulta especialmente útil ***cuando estos atributos requieren de un procesamiento inicial en el momento de ser accedidos***. Para implementar este mecanismo, Python emplea un ***decorador*** llamado `property`."
    ]
   },
@@ -1661,8 +1668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "En Python, una **propiedad** (property) es una **forma de controlar el acceso y la manipulación de atributos de una clase**. Permite definir métodos especiales, conocidos como ***métodos de acceso*** (`getter`) y **métodos de asignación** (`setter`), que se utilizan para obtener y establecer valores en un atributo específico.\n",
+    "El decorador `@property` permite definir métodos especiales, conocidos como ***métodos de acceso*** (`getter`) y **métodos de asignación** (`setter`), que se utilizan para obtener y establecer valores en un atributo específico.\n",
     "\n",
     "La idea detrás de las propiedades es que, en lugar de acceder directamente a los atributos de una clase, se utilicen métodos para interactuar con ellos. Esto proporciona un mayor control sobre cómo se obtienen y establecen los valores, lo que puede ser útil para realizar validaciones, cálculos adicionales u otras operaciones."
    ]
@@ -1686,6 +1692,13 @@
     "\n",
     "Se utilizan junto con el decorador `@property` para hacer que los atributos sean accesibles como si fueran públicos, pero en realidad están controlados por métodos.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Observación:** En Python, no existen atributos realmente privados como en otros lenguajes (como Java o C++), pero se pueden simular utilizando convenciones y mecanismos de encapsulación. Python utiliza una convención para indicar que un atributo es privado usando un guion bajo `_` antes del nombre: `_atributo_privado`"
    ]
   },
   {
@@ -1949,6 +1962,151 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Decorador `@deleter`\n",
+    "\n",
+    "El método @deleter es parte de @property y se usa para definir qué sucede cuando se elimina un atributo de un objeto con del.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cuando usas `@property`, defines un *getter* para obtener el valor de un atributo, y con `@setter` controlas cómo se modifica. Si agregas `@deleter`, defines qué hacer cuando se usa `del objeto.atributo`.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cuenta:\n",
+    "    def __init__(self, saldo_inicial):\n",
+    "        self._saldo = None  \n",
+    "        self.saldo = saldo_inicial  \n",
+    "\n",
+    "    @property\n",
+    "    # Getter\n",
+    "    def saldo(self):  \n",
+    "        return self._saldo # Devuelve el saldo actual.\n",
+    "\n",
+    "    @saldo.setter\n",
+    "    # Setter\n",
+    "    def saldo(self, nuevo_saldo):  \n",
+    "        if isinstance(nuevo_saldo, (int, float)) and nuevo_saldo >= 0: #Asigna un nuevo saldo si es válido (>= 0).\n",
+    "            self._saldo = nuevo_saldo\n",
+    "        else:\n",
+    "            raise ValueError(\"El saldo no puede ser negativo ni un valor inválido\")\n",
+    "    @saldo.deleter\n",
+    "    def saldo(self):\n",
+    "        print(f\"Eliminando el saldo de la cuenta\")\n",
+    "        del self._saldo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cuenta = Cuenta(12345)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(cuenta.saldo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del cuenta.saldo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(cuenta.saldo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Alumno:\n",
+    "    def __init__(self, nombre):\n",
+    "        self._nombre = nombre  \n",
+    "\n",
+    "    @property\n",
+    "    def nombre(self):\n",
+    "        return self._nombre\n",
+    "\n",
+    "    @nombre.setter\n",
+    "    def nombre(self, nuevo_nombre):\n",
+    "        if isinstance(nuevo_nombre, str) and nuevo_nombre.strip():\n",
+    "            self._nombre = nuevo_nombre\n",
+    "        else:\n",
+    "            raise ValueError(\"El nombre debe ser una cadena no vacía\")\n",
+    "\n",
+    "    @nombre.deleter\n",
+    "    def nombre(self):        \n",
+    "        print(f\"Eliminando el nombre '{self._nombre}'...\")\n",
+    "        del self._nombre "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Alumno(\"Juan\")\n",
+    "print(p.nombre)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del p.nombre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(p.nombre)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Métodos especiales"
    ]
   },
@@ -1957,6 +2115,22 @@
    "metadata": {},
    "source": [
     "Así como el constructor, `__init__`, existen diversos métodos especiales que, si están definidos en nuestra clase, Python los llamará por nosotros cuando se utilice una instancia en situaciones particulares.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los **métodos especiales** en Python (también llamados ***dunder methods***, por ***double underscore***, es decir, `__nombre__`) son funciones que permiten definir comportamientos personalizados en las clases.\n",
+    "\n",
+    "* Personalizar la impresión de objetos\n",
+    "  \n",
+    "* Operaciones matemáticas entre objetos\n",
+    "  \n",
+    "* Comparaciones (==, >, <, >=, <=) entre otros\n",
+    "\n",
+    "Todos los métodos especiales comienzan y terminan con `__doble_guion_bajo__`.\n",
     "\n"
    ]
   },
@@ -1986,12 +2160,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En nuestro caso decidimos mostrar el punto como un par ordenado, por lo que escribimos el siguiente método dentro de la clase Punto:"
+    "### Ejemplo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En nuestro caso decidimos mostrar el punto como un par ordenado, por lo que escribimos el siguiente método dentro de la clase `Punto`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2024,23 +2205,8 @@
     "            raise ValueError('El valor ingresado debe ser un numero')\n",
     "    \n",
     "    def __str__(self):\n",
-    "        \"\"\" Muestra el punto como un par ordenado. \"\"\"\n",
-    "        return \"(\" + str(self.x) + \", \" + str(self.y) + \")\"\n",
-    "    \n",
-    "    def norma(self):\n",
-    "        return (self.x**2 + self.y**2)**(1/2)\n",
-    "    \n",
-    "    def diferencia(self, otro_punto):\n",
-    "        return Punto(self.x - otro_punto.x, self.y - otro_punto.y) \n",
-    "    \n",
-    "    def distancia(self,otro_punto):\n",
-    "        \n",
-    "        return self.diferencia(otro_punto).norma()\n",
-    "    \n",
-    "    def punto_medio(self,otro_punto):\n",
-    "        \n",
-    "        return Punto((self.x + otro_punto.x)/2, (self.y + otro_punto.y)/2)\n",
-    "    "
+    "        #Muestra el punto como un par ordenado\n",
+    "        return \"(\" + str(self.x) + \", \" + str(self.y) + \")\""
    ]
   },
   {
@@ -2054,18 +2220,45 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-6, 18)\n"
+     ]
+    }
+   ],
    "source": [
     "p = Punto(-6,18)\n",
-    "#str(p)\n",
     "print(p)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(-6, 18)'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(p)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vemos que con `str(p)` se obtiene la cadena construida dentro de `__str__`, y que internamente Python llama a `__str__` cuando se le pide que imprima una variable de la clase Punto."
+    "Vemos que internamente Python invoca al método `__str__` cuando se le pide que imprima una variable de la clase `Punto`."
    ]
   },
   {
@@ -2145,7 +2338,6 @@
     "            raise ValueError('El valor ingresado debe ser un numero')\n",
     "    \n",
     "    def __str__(self):\n",
-    "        \"\"\" Muestra el punto como un par ordenado. \"\"\"\n",
     "        return \"(\" + str(self.x) + \", \" + str(self.y) + \")\"\n",
     "    \n",
     "    def norma(self):\n",
@@ -2161,11 +2353,11 @@
     "        return Punto((self.x + otro_punto.x)/2, (self.y + otro_punto.y)/2)\n",
     "    \n",
     "    def __add__(self, otro_punto):\n",
-    "        \"\"\" Devuelve la suma de ambos puntos. \"\"\"\n",
+    "        #Devuelve la suma de ambos puntos.\n",
     "        return Punto(self.x + otro_punto.x, self.y + otro_punto.y)\n",
     "\n",
     "    def __sub__(self, otro_punto):\n",
-    "        \"\"\" Devuelve la diferencia de ambos puntos. \"\"\"\n",
+    "        #Devuelve la diferencia de ambos puntos.\n",
     "        return Punto(self.x - otro_punto.x, self.y - otro_punto.y)"
    ]
   },
