--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -1723,6 +1723,7 @@
     "    def x(self):\n",
     "        return self._x\n",
     "    \n",
+    "    @x.setter\n",
     "    def x(self,nueva_cordenada):\n",
     "        if isinstance(nueva_cordenada,(int,float)):\n",
     "            self._x = nueva_cordenada\n",
