--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -1859,14 +1859,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A veces, solo queremos calcular un valor basado en otros atributos, sin permitir que se modifique directamente."
+    "A veces, solo queremos **calcular un valor basado en otros atributos, sin permitir que se modifique directamente**."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Imagina que nuestra cuenta bancaria esta en dólares 🤑, pero queremos obtener automáticamente el saldo en pesos mexicanos."
+    "Imagina que nuestra cuenta bancaria esta en dólares 🤑, pero queremos tener un atributo que  automáticamente almacene el saldo en pesos mexicanos."
    ]
   },
   {
