--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -1895,21 +1895,24 @@
     "    @property\n",
     "    # Utilizamos solo Getter\n",
     "    def saldo_mxn(self):  \n",
-    "        return self.saldo_usd * self.tipo_cambio\n",
-    "    \n",
-    "    \n",
-    "    @property\n",
-    "    def saldo_mxn(self):\n",
-    "        return self._saldo_usd * self.tipo_cambio"
+    "        return self.saldo_usd * self.tipo_cambio\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
-    "cuenta = Cuenta(100, 17.5) \n",
+    "cuenta = Cuenta(2, 10) \n",
     "print(cuenta.saldo_mxn)  "
    ]
   },
