--- a/Semanas/Tema2_POO.ipynb
+++ b/Semanas/Tema2_POO.ipynb
@@ -1932,7 +1932,7 @@
    "metadata": {},
    "source": [
     "#### Ejemplo \n",
-    "Se desea tener una clase `Circulo` donde el radio se pueda modificar, pero el `perímetro` se calcule automáticamente."
+    "Se desea tener una clase `Circulo` donde el radio se pueda modificar, pero el `area` y `perímetro` se calcule automáticamente."
    ]
   },
   {
@@ -1949,7 +1949,11 @@
     "\n",
     "    @property\n",
     "    def perimetro(self):  \n",
-    "        return 2 * math.pi * self.radio  \n"
+    "        return 2 * math.pi * self.radio \n",
+    "    \n",
+    "    @property\n",
+    "    def area(self):  \n",
+    "        return math.pi * self.radio**2  \n"
    ]
   },
   {
